--- a/challenges/challenge_1/index.html
+++ b/challenges/challenge_1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./arrays.js"></script>
+    <!-- <script src="./arrays.js"></script> -->
+    <script src="./arrow_function.js"></script>
   </body>
 </html>
