--- a/challenges/challenge_1/index.html
+++ b/challenges/challenge_1/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <!-- <script src="./arrays.js"></script> -->
-    <script src="./arrow_function.js"></script>
+    <!-- <script src="./arrow_function.js"></script> -->
+    <script src="./destructuring.js"></script>
   </body>
 </html>
