--- a/challenges/challenge_1/index.html
+++ b/challenges/challenge_1/index.html
@@ -8,6 +8,7 @@
   <body>
     <!-- <script src="./arrays.js"></script> -->
     <!-- <script src="./arrow_function.js"></script> -->
-    <script src="./destructuring.js"></script>
+    <!-- <script src="./destructuring.js"></script> -->
+    <script src="./imports.js" type="module"></script>
   </body>
 </html>
