--- a/challenges/challenge_1/index.html
+++ b/challenges/challenge_1/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./arrays.js"></script> -->
     <!-- <script src="./arrow_function.js"></script> -->
     <!-- <script src="./destructuring.js"></script> -->
-    <script src="./imports.js" type="module"></script>
+    <!-- <script src="./imports.js" type="module"></script> -->
+    <script src="./objects.js"></script>
   </body>
 </html>
