Add import module + Fix template literal syntax

--- a/challenges/challenge_1/index.html
+++ b/challenges/challenge_1/index.html
@@ -10,6 +10,7 @@
     <!-- <script src="./arrow_function.js"></script> -->
     <!-- <script src="./destructuring.js"></script> -->
     <!-- <script src="./imports.js" type="module"></script> -->
-    <script src="./objects.js"></script>
+    <!-- <script src="./objects.js"></script> -->
+    <script src="./template_literals.js" type="module"></script>
   </body>
 </html>
