Fix ternary operator bug

--- a/challenges/challenge_1/index.html
+++ b/challenges/challenge_1/index.html
@@ -11,6 +11,7 @@
     <!-- <script src="./destructuring.js"></script> -->
     <!-- <script src="./imports.js" type="module"></script> -->
     <!-- <script src="./objects.js"></script> -->
-    <script src="./template_literals.js" type="module"></script>
+    <!-- <script src="./template_literals.js" type="module"></script> -->
+    <script src="./ternary_operator.js"></script>
   </body>
 </html>
